	functions.

	* server/exmpp_server_stream.erl (features): New function to build a
	features announcement stanza.

	* src/client/exmpp_client_tls.erl, src/server/exmpp_server_tls.erl:
	New modules to deal with TLS negotiation.

	* src/client/exmpp_client_compression.erl,
	src/server/exmpp_server_compression.erl: New modules to deal with
	stream compression negotiation.

2007-04-11  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_factory.erl, src/core/exmpp_stream.erl,
	src/client/exmpp_client_stream.erl,
	src/server/exmpp_server_stream.erl, src/Makefile.am, src/Emakefile.in,
	ebin/Makefile.am, testsuite/check_factory_stream.erl,
	testsuite/Makefile.am: Moved stream handling code to dedicated
	modules.

	* testsuite/check_factory_stream.erl, testsuite/check_stream.erl,
	testsuite/Makefile.am, testsuite/Emakefile.in: Renamed test for
	`exmpp_stream'.

	* src/core/exmpp_factory.erl, src/client/exmpp_client_legacy_auth.erl,
	src/server/exmpp_server_legacy_auth.erl, src/Makefile.am,
	src/Emakefile.in, ebin/Makefile.am,
	testsuite/check_factory_legacy_auth.erl: Moved legacy authentication
	handling to dedicated modules.

	* testsuite/check_factory_legacy_auth.erl,
	testsuite/check_legacy_auth.erl, testsuite/Makefile.am,
	testsuite/Emakefile.in: Renamed test for `exmpp_client_legacy_auth'
	and `exmpp_server_legacy_auth'.

2007-03-07  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/comp: Renamed `src/comp' to `src/compat'.

	* src/exmpp_factory.erl: Move to `src/core'; some code still needs to
	be moved in appropriate modules in `src/server' or `src/client'.

	* src/Makefile.am, src/Emakefile.in, ebin/Makefile.am,
	ebin/exmpp.app.in, testsuite/check_coverity.erl: Updates to take into
	account new `src' layout.

2007-03-06  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_xml.erl: Restore DRIVER_NAME value. Style.
	(get_cdata): Changed return value of the new function clause to the
	`false', like related functions.
